Java cleanups for AutoClosable and other warnings